--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -249,16 +249,15 @@ span{
 
 .form-control{
   
-    margin: 0 auto;
-   width: 290px;
-   height: 50px;
-   background: #fff;
-    border-radius: 30px;
+
+   width: 283px;
+   background: #F0F8FF;
+    border-radius: 40px;
     padding: 10px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    height: 500px;
+    height: 650px;
   
   
 }
@@ -333,7 +332,7 @@ button:hover::before{
      #6fba82);
 }
 button::after{
-    content: 'Entrar';
+    content: 'Cadastrar';
     text-align: center;
     line-height: 40px;
     font-size: 16px;
