--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,9 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    cursor: url(https://www.cursor.cc/cursor3d/84280.png), auto;
-}
+
 .container{
     max-width: 1050px;
     width: 90%;
@@ -143,22 +141,125 @@ body{
     align-items: center;
     
 }
+h1{
+    color:#FFFFFF;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    background: #FFFFFF;
+}
 
-    .form-control{
+
+form label {
+    margin-top: 10px;
+}
+
+form input {
+    margin-top: 8px;
+    outline:0;
+    border: 0;
+    border-bottom: 1px solid #3498DB;
+    padding: 7px;
+    border-radius:0px;
+    background-color: #e5e5e58c;
+}
+
+input:focus, textarea:focus {
+    border-color: #3498DB !important;
+}
+
+input:invalid, textarea:invalid {
+    border-color: red;
+}
+
+input:valid, textarea:valid {
+    border-color: green;
+}
+
+.card-login form input{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    outline:0;
+    border: 0;
+    border-bottom: 1px solid #3498DB;
+    padding: 8px;
+    border-radius:0px;
+}
+
+form input:hover{
+    border-bottom: 1px solid black;
+    transition: 0.5s;
+}
+
+form button {
+    margin-bottom: 10px;
+    margin-top: 15px;
+    background-color: #3498DB;
+    color: white;
+    height: 35px;
+    width: 100%;
+    align-self: center;
+    font-size: 18px;
+    border: 0;
+    border-radius: 2px;
+    cursor: pointer;
+    box-shadow: 0 4px 40px 0 rgb(0, 0, 0, 0.2);
+}
+
+form button:hover{
+    background-color: black;
+    color:white;
+    transition: 1s;
+}
+
+h3 {
+    color: #0e2431;;
+}
+
+.card-cadastro form{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    background: #FFFFFF;
+}
+
+.card-cadastro{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #bdbabae5;
+    border-radius: 5px;
+   background-color: #FFFFFF;
+    height: 430px;
+    margin-top: 5%;
+    width: 70%;
+    align-items: center;
+    box-shadow: 0 4px 80px 0 rgb(0, 0, 0, 0.2);
+    z-index: 5;
+}
+span{
+    color: #38B0DE;
+}
+.cadastro{
+    color: #38B0DE;
+}
+
+.form-control{
   
-       width: 290px;
-       background-color:#F0F8FF;
-        border-radius: 20px;
-        padding: 20px;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-        height: 500px;
-      
-      
-    }
-h2{
-    color: #0e2431;
+  
+   width: 280px;
+   background:#F0F8FF;
+    border-radius: 50px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    height: 430px;
+  
+  
 }
 
 input{
@@ -168,16 +269,13 @@ input{
     padding: 10px;
     margin: 0px 0px 12px -5px;
 }
-button{
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 0;
+.tittle{
+    color: #0e2431;
+    font-family: Marker Felt, fantasy;
 }
-h3{
-    color: black;
+.banner{
+    color: #0e2431;
 }
-
 button{
     width: 150px;
     height: 50px;
@@ -234,7 +332,7 @@ button:hover::before{
      #6fba82);
 }
 button::after{
-    content: 'Ver Estação';
+    content: 'Entrar';
     text-align: center;
     line-height: 40px;
     font-size: 16px;
@@ -252,7 +350,4 @@ button::after{
 }
 body{
     cursor: url(https://www.cursor.cc/cursor3d/84280.png), auto;
-}
-.resultado{
-    color: #0e2431;
 }
