--- a/public/css/login.css
+++ b/public/css/login.css
@@ -175,7 +175,7 @@ input:invalid, textarea:invalid {
 }
 
 input:valid, textarea:valid {
-    border-color: green;
+    border-color: #00FF7F;
 }
 
 .card-login form input{
@@ -253,7 +253,7 @@ span{
    width: 280px;
    background:#F0F8FF;
     border-radius: 50px;
-    padding: 10px;
+    padding: 7px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
