adicionado dark mode na dashboard

--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -241,7 +241,8 @@ h3 {
     z-index: 5;
 }
 span{
-    color: #38B0DE;
+    color: #FF0000;
+   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .cadastro{
     color: #38B0DE;
@@ -350,4 +351,59 @@ button::after{
 }
 body{
     cursor: url(https://www.cursor.cc/cursor3d/84280.png), auto;
+}
+.slider::before{
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+input:checked * .slider{
+    background-color: white;
+}
+input:checked * .slider::before{
+    background-color: black;
+}
+input:checked * .slider{
+    box-shadow: 0 0 1px #2196f3;
+}
+input:checked * .slider::before{
+    transform: translateX(26px);
+}
+.slider.round{
+    border-radius: 34px;
+}
+.slider.round::before{
+    border-radius: 50%;
+}
+.toggle{
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+.dark-mode{
+    background: black;
+    color: #fff;
+}
+.toggle input{
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider{
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
