--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -77,3 +77,65 @@ body{
     top: 5px;
     right: 5px;
 }
+
+.slider::before{
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+input:checked * .slider{
+    background-color: white;
+}
+input:checked * .slider::before{
+    background-color: black;
+}
+input:checked * .slider{
+    box-shadow: 0 0 1px #2196f3;
+}
+input:checked * .slider::before{
+    transform: translateX(26px);
+}
+.slider.round{
+    border-radius: 34px;
+}
+.slider.round::before{
+    border-radius: 50%;
+}
+.toggle{
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+.dark-mode{
+    background: black;
+    color: #fff;
+}
+.toggle input{
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider{
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+.container{
+    background-color:#44a7fd;
+    width: 1335px;
+    color: #fff;
+    background-image: linear-gradient(30deg , #44a7fd ,  #0048bd);
+}
