validações basicas no tela de cadastro

--- a/public/css/estacao.css
+++ b/public/css/estacao.css
@@ -30,7 +30,7 @@ body{
 }
 .navbar .nav-container a{
     text-decoration: none;
-    color: #0e2431;
+    color: #FF4500;
     font-weight: 500;
     font-size: 1.2rem;
     padding: 0.7rem;
