--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -28,7 +28,7 @@
 }
 .navbar .nav-container a{
     text-decoration: none;
-    color: #0e2431;
+    color:#FF4500;
     font-weight: 500;
     font-size: 1.2rem;
     padding: 0.7rem;
@@ -68,7 +68,7 @@
     height: 4px;
     width: 100%;
     border-radius: 10px;
-    background: #0e2431;
+    background: #000000;
 }
 .nav-container .hamburguer-lines .line1{
     transform: 0% 0%;
@@ -352,58 +352,7 @@ button::after{
 body{
     cursor: url(https://www.cursor.cc/cursor3d/84280.png), auto;
 }
-.slider::before{
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-input:checked * .slider{
-    background-color: white;
-}
-input:checked * .slider::before{
-    background-color: black;
-}
-input:checked * .slider{
-    box-shadow: 0 0 1px #2196f3;
-}
-input:checked * .slider::before{
-    transform: translateX(26px);
-}
-.slider.round{
-    border-radius: 34px;
-}
-.slider.round::before{
-    border-radius: 50%;
-}
-.toggle{
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-.dark-mode{
-    background: black;
-    color: #fff;
-}
-.toggle input{
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-.slider{
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: black;
-    -webkit-transition: .4s;
-    transition: .4s;
+.span_erro{
+    color: #FF0000;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
