--- a/public/css/login.css
+++ b/public/css/login.css
@@ -28,7 +28,7 @@
 }
 .navbar .nav-container a{
     text-decoration: none;
-    color: #0e2431;
+    color: #FF4500;
     font-weight: 500;
     font-size: 1.2rem;
     padding: 0.7rem;
@@ -175,7 +175,7 @@ input:invalid, textarea:invalid {
 }
 
 input:valid, textarea:valid {
-    border-color: #00FF7F;
+    border-color: green;
 }
 
 .card-login form input{
@@ -251,13 +251,13 @@ span{
   
   
    width: 280px;
-   background:#F0F8FF;
-    border-radius: 50px;
-    padding: 7px;
+   background:  #F0F8FF;
+    border-radius: 40px;
+    padding: 10px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    height: 430px;
+    height: 450px;
   
   
 }
