--- a/public/css/previsao.css
+++ b/public/css/previsao.css
@@ -1,15 +1,135 @@
-.container{
-    width: 100vh;
+
+
+
+aside{
+    color: #fff;
+    width: 250px;
+    padding-left: 20px;
     height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    background-image: linear-gradient(-30deg , #0048bd , #44a7fd);
+    border-bottom-left-radius: 80px;
 }
-.box{
-    width: 300px;
-    height: 300px;
+aside a{
+    font-size: 12px;
+    color: #fff;
+    display: block;
+    padding: 12px;
+    padding-left: 30px;
+    text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
+}
+aside a:hover{
+    color: #3f5efb;
+    background: #fff;
+    outline: none;
+    position: relative;
+    background-color: #fff;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+aside a i{
+    margin-right: 5px;
+}
+aside a:hover::after{
+    content: "";
+    position: absolute;
+    background-color: transparent;
+    bottom: 100%;
+    right: 0;
+    height: 35px;
+    width: 35px;
+    border-bottom-right-radius: 18px;
+    box-shadow: 0 20px 0 0 #fff;
+}
+aside a:hover::before{
+ content: "";
+ position: absolute;
+ background-color: transparent;
+ top: 38px;
+ right: 0;
+ height: 35px;
+ width: 35px;
+ border-top-right-radius: 18px;
+ box-shadow: 0 -20px 0 0 #fff;   
+}
+aside p{
+    margin: 0;
+    padding: 40px 0;
 }
 body{
+    font-family: "Roboto";
+    width: 100%;
+    height: 100vh;
     margin: 0;
+}
+.social{
+    height: 0;
+}
+.social i::before{
+    width: 12px;
+    height: 12px;
+    font-size: 14px;
+    position: fixed;
+    color: #fff;
+    background: #0077b5;
+    padding: 10px;
+    border-radius: 50%;
+    top: 5px;
+    right: 5px;
+}
+
+.slider::before{
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+input:checked * .slider{
+    background-color: white;
+}
+input:checked * .slider::before{
+    background-color: black;
+}
+input:checked * .slider{
+    box-shadow: 0 0 1px #2196f3;
+}
+input:checked * .slider::before{
+    transform: translateX(26px);
+}
+.slider.round{
+    border-radius: 34px;
+}
+.slider.round::before{
+    border-radius: 50%;
+}
+.toggle{
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+.dark-mode{
+    background: black;
+    color: #fff;
+}
+.toggle input{
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider{
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
