--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -258,7 +258,7 @@ span{
     justify-content: center;
     align-items: center;
     margin: 50 ;
-    height: 650px;
+    height: 580px;
   
   
 }
@@ -348,11 +348,125 @@ button::after{
     top: 10%;
     left: 5%;
     background-color: rgb(19, 20, 22);
-}
-body{
-    cursor: url(https://www.cursor.cc/cursor3d/84280.png), auto;
-}
+}  
 .span_erro{
     color: #FF0000;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.loading .squares{
+    transform: rotate(45deg) translateX(50%);
+}
+.loading h4{
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Roboto";
+    margin-top: 120px;
+}
+.loading .square-1,
+.loading .square-2,
+.loading .square-3{
+    position: absolute;
+    border: 2px solid #ffffff;
+    padding: 16px;
+}
+.loading .square-1{
+    animation: 4.5s animate-square-1 ease infinite;
+    border-color: #b527cf;
+}
+.loading .square-2{
+   margin-left: 34px;
+    border-color: #8035f0;
+    animation: 4.5s animate-square-2 ease infinite;
+}
+.loading .square-3{
+    margin-top: 34px;
+    border-color: #3bd9d9;
+    animation: 4.5s animate-square-3 ease infinite;
+   
+}
+@keyframes animate-square-1{
+    0%,
+    8.33%,
+    91.66%,
+    100%{
+        margin-top: 0;
+        margin-left: 0;
+    }
+    16.66%,
+    25%,
+    33.33%{
+        margin-top: 0;
+        margin-left: 34px;
+    }
+    41.66%,
+    50%,
+    58.33%{
+        margin-top: 34px;
+        margin-left: 34px;
+    }
+    66.66%,
+    75%,
+    83.33%{
+        margin-top: 34px;
+        margin-left: 0;
+    }
+
+}
+
+@keyframes animate-square-2{
+    0%,
+    83.33%,
+    91.66%,
+    100%{
+        margin-top: 0;
+        margin-left: 34px;
+    }
+    8.33%,
+    16.66%,
+    25%{
+        margin-top: 34px;
+        margin-left: 34px;
+    }
+    33.33%,
+    41.66%,
+    50%{
+        margin-top: 34px;
+        margin-left: 0;
+    }
+    58.33%,
+    66.66%,
+    75%{
+        margin-top: 0;
+        margin-left: 0;
+    }
+
+}
+
+@keyframes animate-square-3{
+    0%,
+    8.33%,
+    16.66%,
+    100%{
+        margin-top: 34px;
+        margin-left: 0;
+    }
+    25%,
+    33.33%,
+    41.66%{
+        margin-top: 0;
+        margin-left: 0;
+    }
+    50%,
+    58.33%,
+    66.66%{
+        margin-top: 0;
+        margin-left: 34px;
+    }
+    75%,
+    83.33%,
+    91.66%{
+        margin-top: 34px;
+        margin-left: 34px;
+    }
+
 }
